# wtkrtc-sdk-api

./: .gitignore  BUILD.gn  README.md
mobile_app_patch/: BUILD.gn  h264_sw_patch.patch  local_build.sh
mobile_app_patch/modules/pacing/: BUILD.gn
mobile_app_patch/modules/video_capture/: video_capture.h  video_capture_factory.cc  video_capture_impl.cc  video_capture_impl.h
mobile_app_patch/modules/video_render/: i_video_render.h  video_render.h  video_render_defines.h
mobile_app_patch/rtc_base/: checks.h  json.h
mobile_app_patch/wtkrtc_linux_mac/: wtk_rtc_api.cc
mobile_app_patch/wtkrtc_mediaengine/: BUILD.gn
mobile_app_patch/wtkrtc_mediaengine/wtk_media_sdk/common/: wtk_media_instance.cc  wtk_media_instance.h  wtk_media_sdk.cc  wtk_media_sdk.h  wtk_media_sdk_define.h  wtk_media_sdk_misc_define.h
mobile_app_patch/wtkrtc_mediaengine/wtk_media_sdk/common/android/: wtk_media_sdk_jni.cc  wtk_media_sdk_jni.h
mobile_app_patch/wtkrtc_mediaengine/wtk_media_sdk/common/android_jni/: BUILD.gn  wtk_media_jni.cc  wtk_media_jni.h
mobile_app_patch/wtkrtc_mediaengine/wtk_media_sdk/modules/call/: call_object.cc  call_object.h  wtk_call_ctrl.cc  wtk_call_ctrl.h
mobile_app_patch/wtkrtc_mediaengine/wtk_media_sdk/modules/conference/: conf_object.cc  conf_object.h  wtk_conf_ctrl.cc  wtk_conf_ctrl.h
mobile_app_patch/wtkrtc_mediaengine/wtk_media_sdk/modules/httpclient/: connection.cc  connection.h  helpers.cc  helpers.h  restclient.cc  restclient.h  version.h  wtk_sync_http_api.cc  wtk_sync_http_api.h
mobile_app_patch/wtkrtc_mediaengine/wtk_media_sdk/modules/medialog/: wtk_medialog.cc  wtk_medialog.h
mobile_app_patch/wtkrtc_mediaengine/wtk_media_sdk/modules/notification/: wtk_notification.cc  wtk_notification.h
mobile_app_patch/wtkrtc_mediaengine/wtk_media_sdk/modules/profile/: wtk_user_profile.cc  wtk_user_profile.h
mobile_app_patch/wtkrtc_mediaengine/wtk_media_sdk/modules/ptt/: wtk_ptt_ctrl.cc  wtk_ptt_ctrl.h
mobile_app_patch/wtkrtc_mediaengine/wtk_media_sdk/modules/utility/: tools_func.cc  tools_func.h
mobile_app_patch/wtkrtc_mediaengine/wtk_rtc_api/: BUILD.gn  wtk_rtc_api.cc  wtk_rtc_api.h
mobile_app_patch/wtkrtc_mediaengine/wtk_rtc_api/wtk_video_capturer/: wtk_vcm_capturer.cc  wtk_vcm_capturer.h  wtk_video_capturer.cc  wtk_video_capturer.h
mobile_app_patch/wtkrtc_mediaengine/wtk_service_client/: BUILD.gn  wtkcall_lib.c  wtkcall_lib.h
mobile_app_patch/wtkrtc_mediaengine/wtk_service_client/iax2-client/: frame.h  iax.c  iax2-parser.h  iaxclient.h  iaxclient_lib.c  iaxclient_lib.h  winfuncs.c
mobile_app_patch/wtkrtc_mediaengine/wtk_service_client/ptt_client/: ptt.c  ptt.h  tbcp.h  util.h
mobile_app_patch/wtkrtc_mixer/wtk-mixserver-1.0/: define.h  misc_lib.c  wtk-mixer.c
mobile_app_patch/wtkrtc_mixer/wtkrtc_mixer_api/: fakeaudiocapturemodule.h  wtk_rtc_mixer_api.h
webrtc_api_android/WtkJniLib/: BUILD.gn
webrtc_api_android/WtkJniLib/wtk_rtc_api/: wtk_rtc_api.cc  wtk_rtc_api.h
webrtc_api_android/WtkJniLib/wtk_service_client/: wtkcall_lib.c  wtkcall_lib.h
webrtc_api_android/WtkJniLib/wtk_service_client/iax2-client/: iax-client.h  iax.c  iax2-parser.c  iax2-parser.h  iax2.h  iaxclient.h  iaxclient_lib.c  iaxclient_lib.h  provision.h
webrtc_api_android/WtkJniLib/wtk_service_client/ptt_client/: ptt.h  pttclient.c  util.h
webrtc_api_android/WtkJniLib/wtk_voip_sdk/: wtk_mediaengine_jni.cc  wtk_mediaengine_jni.h
webrtc_api_android/WtkRtc/: local.properties
webrtc_api_android/WtkRtc/app/: build.gradle
webrtc_api_linux/: BUILD.gn  wtk_rtc_api.cc  wtk_rtc_api.h
webrtc_api_linux_mac/: BUILD.gn  wtk_rtc_api.cc  wtk_rtc_api.h
webrtc_r67_patch/: args.gn.android  args.gn.ios
webrtc_r67_patch/modules/pacing/: BUILD.gn
webrtc_r67_patch/modules/video_capture/: BUILD.gn  device_info_impl.cc  video_capture.h  video_capture_factory.cc  video_capture_impl.cc  video_capture_impl.h
webrtc_r67_patch/modules/video_render/: BUILD.gn  video_render_impl.cc  video_render_impl.h
webrtc_r67_patch/rtc_base/: platform_thread.cc  platform_thread.h
wtk-relayserver-1.0/: Makefile  define.h  misc_lib.c  misc_lib.h  wtk-relay.c  wtk-relay.h
wtkrtc_conf_server/: BUILD.gn  README.md
wtkrtc_conf_server/lib_wtkrtc_conf/: fakeaudiocapturemodule.cc
wtkrtc_conf_server/wtk-mixserver-1.0/: misc_lib.h  wtk-mixer.c
wtkrtc_conf_server/wtkrtc_conf_server/: misc_lib.h  wtk-mixer.c  wtk-mixer.h
wtkrtc_conf_server/wtkrtc_mixer_api/: fakeaudiocapturemodule.cc  wtk_rtc_mixer_api.cc  wtk_rtc_mixer_api.h
wtkrtc_linux_mac_loopback/: BUILD.gn  README.md  wtk_rtc_api.cc
wtkrtc_mediaengine/: README.md
wtkrtc_mediaengine/WtkJniLib/: BUILD.gn
wtkrtc_mediaengine/wtkrtc_mediaengine_ios_android/: BUILD.gn
wtkrtc_mediaengine/wtkrtc_mediaengine_ios_android/wtk_engine_sdk/android/: wtk_media_jni.cc  wtk_media_jni.h
wtkrtc_mediaengine/wtkrtc_mediaengine_ios_android/wtk_engine_sdk/ios/: Info.plist
wtkrtc_mediaengine/wtkrtc_mediaengine_ios_android/wtk_rtc_api/: BUILD.gn  wtk_rtc_api.cc  wtk_rtc_api.h
wtkrtc_mediaengine/wtkrtc_mediaengine_ios_android/wtk_rtc_api/wtk_hw_video_codec_objc/: objc_codec_factory_helper.h  objc_codec_factory_helper.mm
wtkrtc_mediaengine/wtkrtc_mediaengine_ios_android/wtk_rtc_api/wtk_video_capturer/: wtk_vcm_capturer.cc  wtk_vcm_capturer.h  wtk_video_capturer.cc  wtk_video_capturer.h
wtkrtc_mediaengine/wtkrtc_mediaengine_ios_android/wtk_service_client/: BUILD.gn  wtkcall_lib.c  wtkcall_lib.h
wtkrtc_mediaengine/wtkrtc_mediaengine_ios_android/wtk_service_client/iax2-client/: iax-client.h  iax.c  iax2-parser.c  iax2.h  iaxclient.h  iaxclient_lib.c  iaxclient_lib.h  unixfuncs.c
wtkrtc_mediaengine/wtkrtc_mediaengine_ios_android/wtk_service_client/ptt_client/: ptt.c  pttclient.c  pttclient.h  tbcp.c  tbcp.h
wtkrtc_proxy_server/: Makefile  README.md  wtk-relay.c
wtkrtc_server/: README.md
wtkrtc_server/asterisk-11.16.0/: aclocal.m4  config.status  configure  configure.ac  makeopts  makeopts.embed_rules  makeopts.in  menuselect-tree  menuselect-treebak  menuselect.makedeps  menuselect.makeopts
wtkrtc_server/asterisk-11.16.0/addons/: .moduleinfo  (+8 more)
(+654 files in other folders)
