import("//webrtc.gni")

config("wtk_mixer_warning"){
  if (is_clang) {
    cflags = [
      "-Wno-absolute-value",
      "-Wno-strict-prototypes",
      "-Wno-undef",
      "-Wno-sizeof-pointer-memaccess",
      "-Wno-undefined-bool-conversion",
      "-Wno-format-security",
      "-Wno-unused-function",
      "-Wno-implicit-function-declaration",
      "-Wno-unused-variable",
      "-Wno-int-conversion",
      "-Wno-incompatible-pointer-types",
      "-Wno-#warnings"
    ]
  }
}
rtc_shared_library("WtkMediaEngineMixer") {
#rtc_source_set("WtkMediaEngineMixer") {
  sources = [
    "lib_wtkrtc_conf/wtk_rtc_mixer_api.cc",
    "lib_wtkrtc_conf/wtk_rtc_mixer_api.h",
    "lib_wtkrtc_conf/fakeaudiocapturemodule.cc",
    "lib_wtkrtc_conf/fakeaudiocapturemodule.h",
  ]
  deps = [
    "//call:call",
    "//call:bitrate_allocator",
    "//logging:rtc_event_log_impl_base",
    "//modules/audio_coding:audio_coding",
    "//modules/audio_device:audio_device",
    "//modules/audio_processing:audio_processing",
    "//modules/audio_mixer:audio_mixer_impl",

    "//system_wrappers:metrics_default",
    "//system_wrappers:field_trial_default", 
    "//system_wrappers:runtime_enabled_features_default",
    "//media:media",
    "//api/audio_codecs:builtin_audio_decoder_factory",
    "//api/video_codecs:video_codecs_api",
    "//modules/rtp_rtcp:rtp_rtcp",
  ]

  if (is_clang) {
    # Suppress warnings from the Chromium Clang plugin (bugs.webrtc.org/163).
    suppressed_configs += [
        "//build/config/clang:extra_warnings",
        "//build/config/clang:find_bad_constructs",
    ]
  }
  #cflags = [
  #    "-fPIC",
  #  ]
}

rtc_executable("wtkrtc_conf_server") {
  sources = [
    "wtkrtc_conf_server/define.h",
    "wtkrtc_conf_server//misc_lib.c",
    "wtkrtc_conf_server/misc_lib.h",
    "wtkrtc_conf_server/wtk-mixer.c",
    "wtkrtc_conf_server/wtk-mixer.h",
  ]

  deps = [
    ":WtkMediaEngineMixer",
  ]
  configs += [
    ":wtk_mixer_warning",
  ]
}
