import("//webrtc.gni")

if (is_android) {
  import("//build/config/android/config.gni")
  import("//build/config/android/rules.gni")
}

rtc_shared_library("WtkMediaEngineJni") {
  sources = []
  if(is_android) {
    sources += [
      "wtk_media_jni.cc",
      "wtk_media_jni.h",
    ]
    suppressed_configs += [ "//build/config/android:hide_all_but_jni_onload" ]
    configs += [ "//build/config/android:hide_all_but_jni" ]

    libs = [
      "log",
    ]
  }
  if(is_ios) {
    sources += [
      "wtk_media_oc.cc",
      "wtk_media_oc.h",
    ]
  }
  if (is_clang) {
    suppressed_configs += [
      "//build/config/clang:extra_warnings",
      "//build/config/clang:find_bad_constructs",
    ]
  }

  deps = [
    "//wtkrtc_mediaengine/wtk_rtc_api:wtk_rtc_api",
    "//wtkrtc_mediaengine/wtk_service_client:wtk_service_api",
  ]
}

